force-app/main/default/objects/ssot__BenefitScheduleAssignment__dlm/fields/ssot__BenefitScheduleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitScheduleId__c</fullName>
    <label>Benefit Schedule</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitScheduleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>