force-app/main/default/objects/ssot__BenefitScheduleAssignment__dlm/fields/ssot__rel_1716726641812_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726641812_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitScheduleAssignment_BenefitAss_rel</label>
    <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
    <relationshipLabel>BenefitScheduleAssignment_BenefitAss_rel</relationshipLabel>
    <relationshipName>rel_1716726641812_end</relationshipName>
    <type>Lookup</type>
</CustomField>